--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "query-string": "^6.8.2",
+    "smooth-scroll": "^16.1.0",
     "streaming-module": "git+ssh://gogs@git.retloko.com:44468/alien.pavlov/streaming-module.git",
     "throttle-debounce": "^2.1.0",
     "tributejs": "^3.7.2",
