Use simple.avn.com as a basePath on prod

--- a/.env.avn
+++ b/.env.avn
@@ -7,3 +7,4 @@ VUE_APP_LOG_MODE = STAGE
 VUE_APP_GAY_HOST = "gayvn.avn2.retloko.com"
 VUE_APP_STRAIGHT_HOST = "gayvn.avn2.retloko.com"
 META_PHP_PATH = __DIR__.'/meta.php'
+VUE_APP_CDN_PATH = '/'
