--- a/.env.avn.production
+++ b/.env.avn.production
@@ -7,3 +7,4 @@ VUE_APP_LOG_MODE = PROD
 VUE_APP_GAY_HOST = "stars.gayvn.com"
 VUE_APP_STRAIGHT_HOST = "stars.avn.com"
 META_PHP_PATH = ''/var/www/stars.avn.com/current/public_html/meta.php''
+VUE_APP_CDN_PATH = 'https://simple.avn.com/'
