--- a/public/static/fonts/team/config.json
+++ b/public/static/fonts/team/config.json
@@ -1635,6 +1635,12 @@
       "css": "link",
       "code": 59392,
       "src": "fontawesome"
+    },
+    {
+      "uid": "09feb4465d9bd1364f4e301c9ddbaa92",
+      "css": "retweet",
+      "code": 59393,
+      "src": "fontawesome"
     }
   ]
 }
