--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 VUE_APP_API_URL = https://avn2.retloko.com/api2/v2
 VUE_APP_RECAPTCHA_SITE_KEY = 6LeeX1IUAAAAAAFOfsT_ZL72M_6AXCdHejfQgTdn
 VUE_APP_NAME = avn
-VUE_APP_TITLE = AVN
+VUE_APP_TITLE = "AVN Stars"
 VUE_APP_SECURION_PK = pk_test_tyEFaT1I3SL57SPjCe4FURsJ
 VUE_APP_LOG_MODE = STAGE
 META_PHP_PATH = __DIR__.'/meta.php'
