Add avn API image as top background; set stars avatar to circle

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-VUE_APP_API_URL = https://avn2.retloko.com/api2/v2
-VUE_APP_RECAPTCHA_SITE_KEY = 6LeeX1IUAAAAAAFOfsT_ZL72M_6AXCdHejfQgTdn
+VUE_APP_API_URL = https://stars.avn.com/api2/v2
+VUE_APP_RECAPTCHA_SITE_KEY = 6LfYBWwUAAAAAPvy_7qyUttTkO7fG9-aV0zl3fI8
 VUE_APP_NAME = avn
 VUE_APP_TITLE = "AVN Stars"
-VUE_APP_SECURION_PK = pk_test_tyEFaT1I3SL57SPjCe4FURsJ
-VUE_APP_LOG_MODE = STAGE
-META_PHP_PATH = __DIR__.'/meta.php'
+VUE_APP_SECURION_PK = pk_live_QNikv7keT4GyNesh1ODHTmba
+VUE_APP_LOG_MODE = PROD
+VUE_APP_GAY_HOST = "stars.gayvn.com"
+VUE_APP_STRAIGHT_HOST = "stars.avn.com"
+META_PHP_PATH = ''/var/www/stars.avn.com/current/public_html/meta.php''
 VUE_APP_CDN_PATH = '/'
