--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-click-outside": "^1.0.7",
     "vue-clipboard2": "^0.2.1",
     "vue-datetime": "^1.0.0-beta.10",
+    "vue-google-login": "^2.0.5",
     "vue-mq": "^0.2.1",
     "vue-multiselect": "^2.1.6",
     "vue-observe-visibility": "^0.4.4",
