--- a/public/static/fonts/team/config.json
+++ b/public/static/fonts/team/config.json
@@ -1647,6 +1647,12 @@
       "css": "book-open",
       "code": 59394,
       "src": "iconic"
+    },
+    {
+      "uid": "b8d0c7d76e87b94882329a88e8e43d3d",
+      "css": "gplus",
+      "code": 61653,
+      "src": "fontawesome"
     }
   ]
 }
