Return awwards voting feature

--- a/.env.avn
+++ b/.env.avn
@@ -8,3 +8,5 @@ VUE_APP_GAY_HOST = "gayvn.avn2.retloko.com"
 VUE_APP_STRAIGHT_HOST = "gayvn.avn2.retloko.com"
 META_PHP_PATH = __DIR__.'/meta.php'
 VUE_APP_CDN_PATH = '/'
+VUE_APP_AWARDS_EVENT_ID = '105'
+VUE_APP_GAY_AWARDS_EVENT_ID = '106'
