--- a/.env.avn.production
+++ b/.env.avn.production
@@ -8,3 +8,5 @@ VUE_APP_GAY_HOST = "stars.gayvn.com"
 VUE_APP_STRAIGHT_HOST = "stars.avn.com"
 META_PHP_PATH = ''/var/www/stars.avn.com/current/public_html/meta.php''
 VUE_APP_CDN_PATH = 'https://simple.avn.com/'
+VUE_APP_AWARDS_EVENT_ID = '105'
+VUE_APP_GAY_AWARDS_EVENT_ID = '106'
