--- a/.env.local.production
+++ b/.env.local.production
@@ -6,3 +6,5 @@ VUE_APP_CONVERTER_URL = https://converter.imageservice.me
 VUE_APP_NAME = teams
 VUE_APP_TITLE = OnMyTeam
 VUE_APP_FILE_UPLOAD_PRESET = team
+VUE_APP_AWARDS_EVENT_ID = '105'
+VUE_APP_GAY_AWARDS_EVENT_ID = '106'
