--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ VUE_APP_SECURION_PK = pk_test_tyEFaT1I3SL57SPjCe4FURsJ
 VUE_APP_LOG_MODE = STAGE
 META_PHP_PATH = __DIR__.'/meta.php'
 VUE_APP_CDN_PATH = '/'
+VUE_APP_AWARDS_EVENT_ID = '105'
+VUE_APP_GAY_AWARDS_EVENT_ID = '106'
