--- a/public/static/fonts/team/config.json
+++ b/public/static/fonts/team/config.json
@@ -1653,6 +1653,18 @@
       "css": "gplus",
       "code": 61653,
       "src": "fontawesome"
+    },
+    {
+      "uid": "b1887b423d2fd15c345e090320c91ca0",
+      "css": "th",
+      "code": 59395,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f805bb95d40c7ef2bc51b3d50d4f2e5c",
+      "css": "th-list",
+      "code": 59396,
+      "src": "fontawesome"
     }
   ]
 }
