--- a/public/static/fonts/team/config.json
+++ b/public/static/fonts/team/config.json
@@ -1653,6 +1653,12 @@
       "css": "gplus",
       "code": 61653,
       "src": "fontawesome"
+    },
+    {
+      "uid": "9daa1fdf0838118518a7e22715e83abc",
+      "css": "file-pdf",
+      "code": 61889,
+      "src": "fontawesome"
     }
   ]
 }
