--- a/public/static/fonts/team/config.json
+++ b/public/static/fonts/team/config.json
@@ -1665,6 +1665,12 @@
       "css": "th-list",
       "code": 59396,
       "src": "fontawesome"
+    },
+    {
+      "uid": "9daa1fdf0838118518a7e22715e83abc",
+      "css": "file-pdf",
+      "code": 61889,
+      "src": "fontawesome"
     }
   ]
 }
