Refactor awards nomination and voting flow with env variables

--- a/.env.avn
+++ b/.env.avn
@@ -10,3 +10,4 @@ META_PHP_PATH = __DIR__.'/meta.php'
 VUE_APP_CDN_PATH = '/'
 VUE_APP_AWARDS_EVENT_ID = '105'
 VUE_APP_GAY_AWARDS_EVENT_ID = '106'
+VUE_APP_IS_AWARDS_ACTIVE = false
