Open awards pre-nomination stage

--- a/.env.team
+++ b/.env.team
@@ -9,4 +9,4 @@ VUE_APP_TITLE = OnMyTeam
 VUE_APP_FILE_UPLOAD_PRESET = team
 VUE_APP_AWARDS_EVENT_ID = '105'
 VUE_APP_GAY_AWARDS_EVENT_ID = '106'
-VUE_APP_IS_AWARDS_ACTIVE = false
+VUE_APP_IS_AWARDS_ACTIVE = true
