Remove awards env variable from non used configs and close awards pre-nomination on prod

--- a/.env.avn.production
+++ b/.env.avn.production
@@ -10,4 +10,4 @@ META_PHP_PATH = ''/var/www/stars.avn.com/current/public_html/meta.php''
 VUE_APP_CDN_PATH = 'https://simple.avn.com/'
 VUE_APP_AWARDS_EVENT_ID = '105'
 VUE_APP_GAY_AWARDS_EVENT_ID = '106'
-VUE_APP_IS_AWARDS_ACTIVE = true
+VUE_APP_IS_AWARDS_ACTIVE = false
