feat(chat) - Delete message feature and refactor ChatMessages component

--- a/public/static/fonts/team/config.json
+++ b/public/static/fonts/team/config.json
@@ -1677,6 +1677,12 @@
       "css": "dollar",
       "code": 128181,
       "src": "modernpics"
+    },
+    {
+      "uid": "d35a1d35efeb784d1dc9ac18b9b6c2b6",
+      "css": "pencil",
+      "code": 9998,
+      "src": "fontawesome"
     }
   ]
 }
