--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-report": "vue-cli-service build --report"
   },
   "dependencies": {
     "@sentry/browser": "^5.8.0",
     "@sentry/integrations": "^5.6.1",
     "credit-card-type": "^8.2.0",
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
     "deepmerge": "^3.3.0",
     "dotenv": "^7.0.0",
     "fingerprintjs2": "^2.1.0",
@@ -20,7 +23,6 @@
     "lodash.uniqby": "^4.7.0",
     "luxon": "^1.16.1",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.26",
     "query-string": "^6.8.2",
     "smooth-scroll": "^16.1.0",
     "streaming-module": "git+ssh://gogs@git.retloko.com:44468/alien.pavlov/streaming-module.git",
