--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.takeright": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "luxon": "^1.25.0",
+    "moment-timezone": "^0.5.32",
     "query-string": "^6.8.2",
     "smooth-scroll": "^16.1.0",
     "streaming-module": "git+ssh://gogs@git.retloko.com:44468/alien.pavlov/streaming-module.git",
