--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "moment-timezone": "^0.5.32",
     "query-string": "^6.8.2",
     "smooth-scroll": "^16.1.0",
-    "streaming-module": "git+https://git.retloko.com/alien.pavlov/streaming-module.git#avn",
+    "streaming-module": "git+https://git.retloko.com/alien.pavlov/streaming-module.git#webrtc",
     "throttle-debounce": "^2.1.0",
     "tributejs": "^3.7.2",
     "truncate-html": "^1.0.3",
@@ -64,7 +64,7 @@
     "eslint-plugin-prettier": "^2.7.0",
     "husky": "^1.3.1",
     "lint-staged": "^9.5.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1",
     "store": "^2.0.12",
     "vue-recaptcha": "^1.2.0",
