--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sentry/browser": "^5.8.0",
     "@sentry/integrations": "^5.6.1",
+    "audio-recorder-polyfill": "^0.4.1",
     "credit-card-type": "^8.2.0",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
