--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deepmerge": "^3.3.0",
     "dotenv": "^7.0.0",
     "fingerprintjs2": "^2.1.0",
+    "hls.js": "^0.14.17",
     "intersection-observer": "^0.7.0",
     "js-logger": "^1.6.0",
     "lodash.takeright": "^4.1.1",
